# Sweety

./: .gitattributes  .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  README.md  README_CN.md
.cargo/: config.toml
.github/workflows/: release.yml
config/: benchmark-nginx.conf  benchmark.toml  sweety.config.example  sweety.example.toml  sweety.toml  sweetyss.toml
config/docs/: architecture.md
crates/sweety-http/: Cargo.toml
crates/sweety-http/src/: builder.rs  engine.rs  lib.rs
docs/: README.md  benchmark.md  cli.md  config-reference.md  getting-started.md  index.md  package-lock.json  package.json  performance.md  roadmap.md
docs/.obsidian/: workspace.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/advanced/: hot-reload.md
docs/configuration/: admin-api.md  cache.md  compression.md  fastcgi.md  global.md  grpc.md  http3.md  locations.md  overview.md  presets.md  rate-limit.md  real-ip.md  reverse-proxy.md  sites.md  tls.md  websocket.md
docs/en-us/: benchmark.md  cli.md  index.md  roadmap.md
docs/en-us/advanced/: hot-reload.md
docs/en-us/configuration/: admin-api.md  cache.md  fastcgi.md  global.md  grpc.md  http3.md  locations.md  overview.md  presets.md  rate-limit.md  real-ip.md  reverse-proxy.md  sites.md  tls.md  websocket.md
docs/en-us/examples/: grpc.md  laravel.md  reverse-proxy.md  static-site.md  wordpress.md
docs/en-us/getting-started/: faq.md  installation.md  introduction.md  quickstart.md
docs/examples/: grpc.md  laravel.md  reverse-proxy.md  static-site.md  wordpress.md
docs/getting-started/: faq.md  installation.md  introduction.md  quickstart.md
docs/zh/: roadmap.md  快速开始.md  配置参考.md
scripts/: sweety.service  sysctl_tune.sh
src/: cli.rs  lib.rs  main.rs  util.rs
src/admin_api/: context.rs  doc.rs  http.rs  mod.rs  router.rs  server.rs  util.rs  websocket.rs
src/admin_api/handlers/: config.rs  mod.rs  runtime.rs  sites.rs  system.rs  upstreams.rs
src/cmd/: daemon.rs  mod.rs  reload.rs  run.rs  validate.rs
src/config/: expand.rs  hot_reload.rs  loader.rs  mod.rs  model.rs  preset.rs
src/config/model/: compress.rs  global.rs  location.rs  site.rs  tls.rs  upstream.rs
src/dispatcher/: location.rs  mod.rs  rewrite.rs  vhost.rs
src/handler/: auth_request.rs  compress.rs  error_page.rs  fastcgi.rs  fastcgi_pool.rs  grpc.rs  mod.rs  reverse_proxy.rs  sendfile.rs  static_file.rs  websocket.rs
src/handler/fastcgi/: proto.rs  response.rs
src/handler/plugin/: mod.rs
src/handler/reverse_proxy/: circuit_breaker.rs  conn.rs  error.rs  lb.rs  mod.rs  pool.rs  proxy_protocol.rs  response.rs  retry.rs  tls_client.rs  upstream_h2.rs  ws_proxy.rs
src/handler/static_file/: cache.rs  compress.rs  path.rs  range.rs
src/middleware/: access_control.rs  access_log.rs  cache.rs  error_log.rs  metrics.rs  mod.rs  proxy_cache.rs  rate_limit.rs  real_ip.rs  security.rs
src/monitor/: analyzer.rs  collector.rs  mod.rs  prometheus.rs
src/server/: acme.rs  dns01.rs  http.rs  mod.rs  quic.rs  router.rs  state.rs  tls.rs
