[package]
name        = "sweety"
version     = "0.1.0"
edition     = "2021"
description = "高性能、单文件部署、多站点 Web 服务器"
license     = "MIT"
authors     = ["Sweety Contributors"]

[[bin]]
name = "sweety"
path = "src/main.rs"

[lib]
name = "sweety_lib"
path = "src/lib.rs"

# ─────────────────────────────────────────────
# 核心依赖
# ─────────────────────────────────────────────
[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# ── Web 框架（xitca-web 0.8）──────────────────
# http1/http2/http3 协议支持
# rustls TLS（纯 Rust，无 C 依赖）
# websocket 内置 WS 支持
# file 静态文件服务
# rate-limit 内置限流
# logger tracing 日志中间件
# json/compress-gz 可选扩展
# xitca-io：xitca-web HTTP/3 依赖的 IO 层（QuicConfig 等类型在此）
xitca-io  = { version = "0.5", features = ["quic"] }
xitca-web = { version = "0.7", features = [
    "http1", "http2", "http3",
    "rustls",
    "websocket",
    "file",
    "rate-limit",
    "logger",
    "json",
    "compress-gz",
    "compress-br",
] }

# ── TLS / 证书 ────────────────────────────────
# rustls 纯 Rust TLS，使用 ring 后端（无 C 依赖）
rustls         = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile  = "2"
tokio-rustls    = { version = "0.26", default-features = false, features = ["ring"] }
# TLS 客户端根证书（反向代理证书验证）
webpki-roots    = "0.26"
# ACME 自动证书（ring 后端，纯 Rust）
rustls-acme    = { version = "0.15", default-features = false, features = ["ring", "tokio", "webpki-roots"] }
# WebSocket 协议库（xitca-web websocket feature 已引入此 crate）
http-ws        = { version = "0.3", features = ["stream"] }
# http 基础类型（WebSocket handler 需要）
http           = "1"
# 证书生成（CSR/自签名，ring 后端）
rcgen          = { version = "0.13", default-features = false, features = ["ring"] }

# ── 序列化 / 配置 ─────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
serde_yaml  = "0.9"

# ── 正则（Rewrite 规则）──────────────────────
regex = "1"

# ── 文件监听（热重载）────────────────────────
notify = "6"

# ── 日志 ──────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── 并发数据结构 ──────────────────────────────
dashmap = "6"

# ── CLI 参数 ──────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── 时间 ──────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── 通用工具 ────────────────────────────────
futures-util  = "0.3"
tokio-stream  = "0.1"
bytes        = "1"
anyhow       = "1"
thiserror    = "1"
url          = "2"
mime_guess   = "2"
# HTTP 日期格式（ETag/Last-Modified 需要）
httpdate     = "1"
# 系统目录（ACME 证书缓存目录）
dirs-next    = "2"

# ─────────────────────────────────────────────
# 可选 Features（国密 SM2/SM3/SM4）
# ─────────────────────────────────────────────
[features]
default = []
# 国密支持（启用：cargo build --features gm）
gm = []
# HTTP/3 支持（由 xitca-web http3 feature 提供，此处仅作开关标志）
http3 = []

# ─────────────────────────────────────────────
# 测试依赖
# ─────────────────────────────────────────────
[dev-dependencies]
tokio    = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

# ─────────────────────────────────────────────
# 编译优化
# ─────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
