[workspace]
members = [
    ".",
]
exclude = [
    "vendor/sweety-collection",
    "vendor/sweety-service",
    "vendor/sweety-io-v4",
    "vendor/sweety-io-v5",
    "vendor/sweety-router",
    "vendor/sweety-tls",
    "vendor/sweety-server",
    "vendor/sweety-http-core",
    "vendor/sweety-web",
]
resolver = "2"

[workspace.dependencies]
# 共享版本约束，各 crate 通过 workspace = true 引用
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
tracing      = "0.1"
bytes        = "1"
rustls       = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
sweety-web   = { path = "vendor/sweety-web" }
sweety-io    = { path = "vendor/sweety-io-v5", features = ["quic"] }
quinn        = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio", "aws-lc-rs"] }

[package]
name        = "sweety"
version     = "0.2.1"
edition     = "2021"
description = "高性能、单文件部署、多站点 Web 服务器"
license     = "Apache-2.0"
authors     = ["Sweety Contributors"]

[[bin]]
name = "sweety"
path = "src/main.rs"

[lib]
name = "sweety_lib"
path = "src/lib.rs"

# ─────────────────────────────────────────────
# 核心依赖
# ─────────────────────────────────────────────
[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# ── Web 框架（sweety-web）──────────────────────
# http1/http2/http3 协议支持
# rustls TLS（纯 Rust，无 C 依赖）
# websocket 内置 WS 支持
# file 静态文件服务
# rate-limit 内置限流
# logger tracing 日志中间件
# json/compress-gz 可选扩展
# sweety-io：HTTP/3 依赖的 IO 层（QuicConfig 等类型在此）
sweety-io  = { path = "vendor/sweety-io-v5", features = ["quic"] }
sweety-web = { path = "vendor/sweety-web", features = [
    "http1", "http2", "http3",
    "rustls",
    "websocket",
    "file",
    "rate-limit",
    "logger",
    "json",
    "compress-gz",
    "compress-br",
] }

# ── TLS / 证书 ────────────────────────────────
# rustls TLS，使用 aws-lc-rs 后端（高性能，对标 OpenSSL AES-NI）
rustls         = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
rustls-pemfile  = "2"
tokio-rustls    = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
# TLS 客户端根证书（反向代理证书验证）
webpki-roots    = "0.26"
# ACME 自动证书（HTTP-01，instant-acme）
instant-acme   = "0.7"
# WebSocket 协议库（sweety-web websocket feature 已引入此 crate）
http-ws        = { version = "0.3", features = ["stream"] }
# http 基础类型（WebSocket handler 需要）
http           = "1"
# 证书生成（CSR/自签名，aws-lc-rs 后端）
rcgen          = { version = "0.13", default-features = false, features = ["aws_lc_rs"] }

# ── 序列化 / 配置 ─────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
serde_yaml  = "0.9"

# ── 正则（Rewrite 规则）──────────────────────
regex = "1"

# ── 文件监听（热重载）────────────────────────
notify = "6"

# ── 日志 ──────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }

# ── 并发数据结构 ──────────────────────────────
dashmap = "6"
arc-swap = "1"

# ── CLI 参数 ──────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── 时间 ──────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── 通用工具 ────────────────────────────────
futures-util  = "0.3"
tokio-util    = { version = "0.7", features = ["io"] }
tokio-stream  = { version = "0.1", features = ["sync"] }
h2            = "0.4"
bytes        = "1"
flate2       = "1"
async-compression = { version = "0.4", features = ["brotli", "tokio"] }
async-stream      = "0.3"
# mmap 零拷贝大文件传输（文件直接映射到进程地址空间，绕过 read() 内核→用户态拷贝）
memmap2           = "0.9"
x509-parser  = { version = "0.16", default-features = false }
anyhow       = "1"
itoa         = "1"
# 完美哈希表（编译期生成，MIME 类型查找 O(1)）
phf          = { version = "0.11", features = ["macros"] }
# jemalloc 通过 [target] 条件依赖引入（见下方）
base64       = "0.22"
thiserror    = "1"
url          = "2"
mime_guess   = "2"
# HTTP 日期格式（ETag/Last-Modified 需要）
httpdate     = "1"
# 系统目录（ACME 证书缓存目录）
dirs-next    = "2"
# HTTP 客户端（DNS-01 API 调用）
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# HMAC-SHA1（阿里云 DNS 签名）
hmac         = "0.12"
sha1         = "0.10"
# sendfile(2) syscall（Linux/macOS 零拷贝静态文件传输）
libc         = "0.2"
# Quinn QUIC 传输层（HTTP/3），版本与 sweety-io 0.5.1 内部使用的版本一致
quinn        = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio", "aws-lc-rs"] }

# ─────────────────────────────────────────────
# 平台特定依赖
# ─────────────────────────────────────────────
# jemalloc 仅在非 Windows 平台启用（Windows 无法编译其 C 代码）
[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

# ─────────────────────────────────────────────
# Features
# ─────────────────────────────────────────────
[features]
# jemalloc 默认开启（Linux/macOS）；Windows 上此 feature 存在但依赖不引入
default = ["jemalloc"]
# HTTP/3 支持（由 sweety-web http3 feature 提供，此处仅作开关标志）
http3 = []
# 高性能内存分配器（Linux/macOS 有效，Windows 自动跳过）
jemalloc = ["dep:tikv-jemallocator"]

# ─────────────────────────────────────────────
# 测试依赖
# ─────────────────────────────────────────────
[dev-dependencies]
tokio    = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

# ─────────────────────────────────────────────
# 编译优化
# ─────────────────────────────────────────────
[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true
overflow-checks = false   # release 构建禁用整数溢出检查，等价 C 发布模式
