[package]
name        = "sweety-http"
version     = "0.1.0"
edition     = "2021"
description = "Sweety HTTP 抽象层：定义 HttpEngine trait，隔离底层实现"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# 核心类型
anyhow   = "1"
tracing  = "0.1"
bytes    = "1"

# TLS
rustls         = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
tokio-rustls   = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }

# xitca-web 实现层（通过 workspace patch 指向本地 vendor）
xitca-web = { version = "0.7", features = [
    "http1", "http2", "http3",
    "rustls",
    "websocket",
    "file",
    "rate-limit",
    "logger",
    "json",
    "compress-gz",
    "compress-br",
] }
xitca-io = { version = "0.5", features = ["quic"] }

quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
